# code-challenge

./: .replit  exercices.py  exercices_test.py  main.py  pyproject.toml  solutions.py  solutions_test.py  testrunner.py
.hypothesis/examples/0f4b71ffe6b22fe7/: 03a0398722afe9cd  06598dfe2b82ec54  1a4d5591d386aebb  5bc484709f408cc2  e15b8034641faaef  e4200c445de0209b  eda6ae7042e026d9
.hypothesis/examples/4450db10025baa2b/: 3e0cc4c5f7f25fa8  724b3b84fa2f17be  96b5e4b7b7c46929  b2ef123afb04ecd0  f416465f01db10d2
.hypothesis/examples/703f7016b558a5a1/: 70d6956c6f0c5071  829c3c8c7adfd43d
internals/: functions.py  solutions.py
